# vscode-cmake-insights

./: .gitignore  README.md  TODO.txt  package.json  tsconfig.json
demo/: CMakeLists.txt
demo/src/: CMakeLists.txt  a.cc  b.cc  c.cc  main.cc
demo/src/subproj/: CMakeLists.txt  d.cc
src/: cmake_file_api.ts  constants.ts  extension.ts  fs_promise.ts
webview/: dependencies-cytoscape.html  dependencies-dagre-d3.html  dependencies.html
